# MyPlace

./: Building_Asio  README.md
Ping_Pong/: Makefile  client.cpp  server.cpp
Ping_Pong_Asio/: Makefile  client.cpp  server.cpp
Project/: Project.pro  createrlabel.cpp  createrlabel.h  createrlabel.ui  mainwindow.ui  openlabel.cpp  openlabel.h  openlabel.ui  resource.qrc  secondwindow.cpp  secondwindow.h  secondwindow.ui
add_label/: Makefile  client.cpp  client_test.cpp  server.cpp  server_test.cpp
build-Project-Desktop-Debug/: Makefile  Project  moc_createrlabel.cpp  moc_mainwindow.cpp  moc_openlabel.cpp  moc_secondwindow.cpp  qrc_resource.cpp  ui_createrlabel.h  ui_mainwindow.h  ui_openlabel.h  ui_secondwindow.h
build-project-Desktop-Debug/: Makefile  moc_createrlabel.cpp  moc_mainwindow.cpp  moc_menuwindow.cpp  moc_openlabel.cpp  ui_createrlabel.h  ui_mainwindow.h  ui_menuwindow.h  ui_openlabel.h  ui_secondwindow.h
build-project-Desktop_Qt_5_15_2_clang_64bit-Release/: Makefile  main_qml.cpp  moc_createrlabel.cpp  moc_mainwindow.cpp  moc_markermodel.cpp  moc_menuwindow.cpp  moc_newaccount.cpp  moc_openlabel.cpp  moc_predefs.h  moc_searchaccounts.cpp  moc_secondwindow.cpp  qmlcache_loader.cpp  resource_qmlcache.qrc  ui_createrlabel.h  ui_mainwindow.h  ui_menuwindow.h  ui_newaccount.h  ui_openlabel.h  ui_searchaccounts.h  ui_secondwindow.h
client/: client.h  (+39 more)
server/: CMakeLists.txt  Makefile  label.cpp  label.h  server  server.cpp  users.cpp  users.h
server/include/: database.h  information.txt  label.h  users.h
server/src/: label.cpp  server.cpp  users.cpp
(+43 files in other folders)
